256. Turning our target labels into numbers (ML models require numbers)

--- a/09_milestone_project_2_skimlit.ipynb
+++ b/09_milestone_project_2_skimlit.ipynb
@@ -61,17 +61,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "e15lhSphBQBM",
-        "outputId": "18c65ae7-12db-4308-f408-a4f0bce3c496"
+        "outputId": "ef0b12fe-cc80-4140-e1a5-9e026ce7204a"
       },
       "source": [
         "!nvidia-smi -L"
       ],
-      "execution_count": 14,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "GPU 0: Tesla T4 (UUID: GPU-7b017878-1b06-8a91-6184-62eca5c98601)\n"
+            "GPU 0: Tesla K80 (UUID: GPU-43670678-4fa1-764f-6dd3-72765106a1f6)\n"
           ],
           "name": "stdout"
         }
@@ -96,18 +96,23 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YYhWiiA8Cju9",
-        "outputId": "3f16881b-1057-4208-84bd-b4e85856440f"
+        "outputId": "c2990430-9bda-4adb-a792-1657127d1f46"
       },
       "source": [
         "!git clone https://github.com/Franck-Dernoncourt/pubmed-rct\n",
         "!ls pubmed-rct"
       ],
-      "execution_count": 15,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "fatal: destination path 'pubmed-rct' already exists and is not an empty directory.\n",
+            "Cloning into 'pubmed-rct'...\n",
+            "remote: Enumerating objects: 33, done.\u001b[K\n",
+            "remote: Counting objects: 100% (3/3), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (3/3), done.\u001b[K\n",
+            "remote: Total 33 (delta 0), reused 0 (delta 0), pack-reused 30\u001b[K\n",
+            "Unpacking objects: 100% (33/33), done.\n",
             "PubMed_200k_RCT\n",
             "PubMed_200k_RCT_numbers_replaced_with_at_sign\n",
             "PubMed_20k_RCT\n",
@@ -125,14 +130,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_JevalUXDYYj",
-        "outputId": "27e660c5-e131-419f-8a0d-b02244d964bb"
+        "outputId": "8f616534-04f4-463f-c1dc-790de9c9e56c"
       },
       "source": [
         "# Check what files are in the PubMed_20K dataset\n",
         "! ls pubmed-rct/PubMed_20k_RCT_numbers_replaced_with_at_sign/\n",
         "#! ls pubmed-rct/PubMed_20k_RCT/"
       ],
-      "execution_count": 16,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -152,7 +157,7 @@
         "# Start our experiments using the 20K dataset with numbers replaced by \"@\" sign\n",
         "data_dir = \"/content/pubmed-rct/PubMed_20k_RCT_numbers_replaced_with_at_sign/\"\n"
       ],
-      "execution_count": 17,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -162,7 +167,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kDLjWWDBE1fo",
-        "outputId": "4ab6e741-52e3-407d-d6fa-8c118c2d77d7"
+        "outputId": "285a5dba-8141-4203-f467-3ef0f70bc172"
       },
       "source": [
         "# Check all of the filenames in the target directory \n",
@@ -170,7 +175,7 @@
         "filenames = [data_dir + filename for filename in os.listdir(data_dir)]\n",
         "filenames"
       ],
-      "execution_count": 18,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -184,7 +189,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 18
+          "execution_count": 7
         }
       ]
     },
@@ -224,7 +229,7 @@
         "  with open(filename, \"r\") as f :\n",
         "    return f.readlines()\n"
       ],
-      "execution_count": 19,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -234,14 +239,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "184aafc3-5a90-4f7d-d3cf-4671cd498b0c"
+        "outputId": "2c881873-7f3c-40ed-d1f3-9e64ea603a6c"
       },
       "source": [
         "# Let's read in the training lines\n",
         "train_lines = get_lines(data_dir  + \"train.txt\")\n",
         "train_lines[:28]"
       ],
-      "execution_count": 20,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -280,7 +285,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 20
+          "execution_count": 9
         }
       ]
     },
@@ -291,12 +296,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0c212fb7-5dcc-4b08-9504-ee87b0a0ee70"
+        "outputId": "f150f9d3-419b-429c-ff18-f900a5600c6d"
       },
       "source": [
         "len(train_lines)"
       ],
-      "execution_count": 21,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -308,7 +313,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 21
+          "execution_count": 10
         }
       ]
     },
@@ -377,7 +382,7 @@
         "  return abstract_samples\n",
         "\n"
       ],
-      "execution_count": 22,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -387,7 +392,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wWk8FwfEbhme",
-        "outputId": "d22c92ac-364f-4819-ed02-34afab02f2a3"
+        "outputId": "9ebdbb94-4824-44ae-9f0f-094c1c061397"
       },
       "source": [
         "# Get data from file and preprocess it\n",
@@ -397,14 +402,14 @@
         "test_samples = preprocess_text_with_line_numbers(data_dir + \"test.txt\")\n",
         "print(len(train_samples), len(val_samples), len(test_samples))"
       ],
-      "execution_count": 23,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "180040 30212 30135\n",
-            "CPU times: user 479 ms, sys: 80.6 ms, total: 559 ms\n",
-            "Wall time: 560 ms\n"
+            "CPU times: user 571 ms, sys: 106 ms, total: 677 ms\n",
+            "Wall time: 677 ms\n"
           ],
           "name": "stdout"
         }
@@ -417,13 +422,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ApFKvvNocl2h",
-        "outputId": "edaec1b5-279a-4317-ddf9-1858163b0805"
+        "outputId": "293afae5-36b2-4a61-b26a-f92e418708d2"
       },
       "source": [
         "# Check the first abstract of our training  data\n",
         "train_samples[:14]"
       ],
-      "execution_count": 24,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -490,7 +495,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 24
+          "execution_count": 13
         }
       ]
     },
@@ -511,7 +516,7 @@
           "height": 483
         },
         "id": "efTctER8c7ga",
-        "outputId": "f231246c-3d81-4b5b-cef3-c7d886ff6337"
+        "outputId": "2084fcb3-c7c3-441c-df97-1292f993ba2c"
       },
       "source": [
         "import pandas as pd\n",
@@ -520,7 +525,7 @@
         "test_df = pd.DataFrame(test_samples)\n",
         "train_df.head(14)"
       ],
-      "execution_count": 25,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -676,7 +681,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 25
+          "execution_count": 14
         }
       ]
     },
@@ -687,13 +692,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "B7UIQop8939p",
-        "outputId": "5fd7e513-9bb6-4a41-ba55-8456aa6fcc25"
+        "outputId": "6128733d-2095-4fc2-ec2a-b845d210533b"
       },
       "source": [
         "# Distribution of labels in training data\n",
         "train_df.target.value_counts()"
       ],
-      "execution_count": 27,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -710,7 +715,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 27
+          "execution_count": 15
         }
       ]
     },
@@ -722,13 +727,13 @@
           "height": 267
         },
         "id": "kRFmpmQ8-H_K",
-        "outputId": "6670346e-0dde-45f1-f448-825dd54a4c59"
+        "outputId": "1bc3b961-ac2f-4fac-f5c7-f18cd3db8c12"
       },
       "source": [
         "# Let's check the length of different lines\n",
         "train_df.total_lines.plot.hist();"
       ],
-      "execution_count": 28,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "display_data",
@@ -761,7 +766,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nJzqUxaD-8lR",
-        "outputId": "afb586ba-aba9-464e-d3a4-fb061378f254"
+        "outputId": "98f367d0-3dc0-43e5-a831-d8c13372dfb8"
       },
       "source": [
         "# Convert abstract text lines into lists\n",
@@ -770,7 +775,7 @@
         "test_sentences = test_df[\"text\"].to_list()\n",
         "len(train_sentences), len(val_sentences), len(test_sentences)\n"
       ],
-      "execution_count": 29,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -782,7 +787,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 29
+          "execution_count": 17
         }
       ]
     },
@@ -793,13 +798,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tfhz2zfOABQW",
-        "outputId": "838d73cb-6cc1-4eaf-c2f3-c2a7d952d3e4"
+        "outputId": "5de7ea5d-9b11-4d38-db81-c9f11c843e3b"
       },
       "source": [
         "# View the 10 lines of training sentences\n",
         "train_sentences[:10]"
       ],
-      "execution_count": 30,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -820,7 +825,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 30
+          "execution_count": 18
         }
       ]
     },
@@ -840,7 +845,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MnCl-CDyAIbu",
-        "outputId": "ddabf281-b239-48c3-b46e-fd9ed0b56fb9"
+        "outputId": "98271de0-59f5-424a-d988-f721b412deb2"
       },
       "source": [
         "# One hot encode labels\n",
@@ -853,7 +858,7 @@
         "# Check what one hot encoded labels look like\n",
         "train_labels_one_hot"
       ],
-      "execution_count": 43,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -871,18 +876,18 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 43
+          "execution_count": 19
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NQfrfJgsDfQi",
-        "outputId": "2b8351a7-14fe-4fc4-c8e9-186ba4c3face",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "NQfrfJgsDfQi",
+        "outputId": "10c6bf57-e64b-4d00-eb51-8f199e640a25"
       },
       "source": [
         "## Label encode labels\n",
@@ -897,7 +902,7 @@
         "\n",
         "train_labels_encoded"
       ],
-      "execution_count": 45,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -909,17 +914,49 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 45
+          "execution_count": 20
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cSFEakNYEI30"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cSFEakNYEI30",
+        "outputId": "dd9e1c79-e3fb-4287-fda1-d6a5f15a9447"
       },
       "source": [
-        "# Get class "
+        "# Get class names and number of classes from LabelEncoder instance\n",
+        "num_classes = len(label_encoder.classes_)\n",
+        "class_names = label_encoder.classes_\n",
+        "num_classes, class_names"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(5, array(['BACKGROUND', 'CONCLUSIONS', 'METHODS', 'OBJECTIVE', 'RESULTS'],\n",
+              "       dtype=object))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UA4oWHkvXRL9"
+      },
+      "source": [
+        "# Baseline Model using SkLearn\n"
       ],
       "execution_count": null,
       "outputs": []
