257. Model 0: Creating, fitting and evaluating a baseline model for SkimLit

--- a/09_milestone_project_2_skimlit.ipynb
+++ b/09_milestone_project_2_skimlit.ipynb
@@ -925,7 +925,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cSFEakNYEI30",
-        "outputId": "dd9e1c79-e3fb-4287-fda1-d6a5f15a9447"
+        "outputId": "128018b8-dd18-471a-ba1b-0b3518da754f"
       },
       "source": [
         "# Get class names and number of classes from LabelEncoder instance\n",
@@ -933,7 +933,7 @@
         "class_names = label_encoder.classes_\n",
         "num_classes, class_names"
       ],
-      "execution_count": 22,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -946,17 +946,246 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 22
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "iBgg8NT0bu8S"
+      },
+      "source": [
+        "## Starting  a series of modelling experiments...\n",
+        "As usual, we're going to be trying out a bunch of different models and seeing which one works best.\n",
+        "And as always, we're going to start with a baseline model (TF-IDF Multinomial Naive Bayes classifier).\n",
+        "\n",
+        "Refer to the blog here for understanding ML concepts\n",
+        "https://chrisalbon.com/\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UA4oWHkvXRL9"
+      },
+      "source": [
+        "## Model 0 : Getting a baseline model\n",
+        "\n",
+        "We will learn machine learning experiments, we'll use SkLearn's Multinomial Naive Bayes using TF-IDF formula to convert words to numbers."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5MfCSfqkYXo3",
+        "outputId": "c34236f8-0bc9-4f3e-9de1-26d23677afa6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+        "from sklearn.naive_bayes import MultinomialNB\n",
+        "from sklearn.pipeline import Pipeline\n",
+        "\n",
+        "model_0 = Pipeline([\n",
+        "                    (\"tf-idf\", TfidfVectorizer()), # Convert words to numbers using tdidf\n",
+        "                    (\"clf\", MultinomialNB()) # model the text\n",
+        "])\n",
+        "\n",
+        "# Fit the pipeline to the training data\n",
+        "model_0.fit(X= train_sentences, \n",
+        "            y = train_labels_encoded)"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Pipeline(memory=None,\n",
+              "         steps=[('tf-idf',\n",
+              "                 TfidfVectorizer(analyzer='word', binary=False,\n",
+              "                                 decode_error='strict',\n",
+              "                                 dtype=<class 'numpy.float64'>,\n",
+              "                                 encoding='utf-8', input='content',\n",
+              "                                 lowercase=True, max_df=1.0, max_features=None,\n",
+              "                                 min_df=1, ngram_range=(1, 1), norm='l2',\n",
+              "                                 preprocessor=None, smooth_idf=True,\n",
+              "                                 stop_words=None, strip_accents=None,\n",
+              "                                 sublinear_tf=False,\n",
+              "                                 token_pattern='(?u)\\\\b\\\\w\\\\w+\\\\b',\n",
+              "                                 tokenizer=None, use_idf=True,\n",
+              "                                 vocabulary=None)),\n",
+              "                ('clf',\n",
+              "                 MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True))],\n",
+              "         verbose=False)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 28
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UA4oWHkvXRL9"
+        "id": "6hC2x5MDcFIk",
+        "outputId": "7f8d9bdd-374b-4176-c255-44926f8f8bd2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# Baseline Model using SkLearn\n"
+        "# EValuate baseline mdoel on validation dataset\n",
+        "model_0.score(X = val_sentences,\n",
+        "              y = val_labels_encoded)"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.7218323844829869"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "laSLZraadxy6",
+        "outputId": "c160a5ad-1a71-489f-9692-63cbc397d9cf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Make prediction using our baseline model\n",
+        "baseline_preds = model_0.predict(val_sentences)\n",
+        "baseline_preds"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([4, 1, 3, ..., 4, 4, 1])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "kLGF2nvhd-IU"
+      },
+      "source": [
+        "### Download helper function script\n",
+        "In the previous modules, we wrote a function to compare predictions across different metrics(accuracy, precision, recall and f1)\n",
+        "and rather than rewriting it here, let's download from our helper function script : https://raw.githubusercontent.com/mrdbourke/tensorflow-deep-learning/main/extras/helper_functions.py"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-bDlsNSqeO4s",
+        "outputId": "cc89e6ae-0d10-47d6-ee1e-e05471de062d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!wget https://raw.githubusercontent.com/mrdbourke/tensorflow-deep-learning/main/extras/helper_functions.py"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "--2021-08-08 15:54:33--  https://raw.githubusercontent.com/mrdbourke/tensorflow-deep-learning/main/extras/helper_functions.py\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 10246 (10K) [text/plain]\n",
+            "Saving to: ‘helper_functions.py’\n",
+            "\n",
+            "\rhelper_functions.py   0%[                    ]       0  --.-KB/s               \rhelper_functions.py 100%[===================>]  10.01K  --.-KB/s    in 0s      \n",
+            "\n",
+            "2021-08-08 15:54:33 (81.0 MB/s) - ‘helper_functions.py’ saved [10246/10246]\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aoVx-K4VeRcx"
+      },
+      "source": [
+        "from helper_functions import calculate_results"
+      ],
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4KTSQV5Aep2Z",
+        "outputId": "36aad9ed-bed2-4915-e992-e50a2c4c7a26",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Calculate baseline results\n",
+        "baseline_results = calculate_results(y_true=val_labels_encoded,\n",
+        "                                     y_pred = baseline_preds)\n",
+        "baseline_results"
+      ],
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'accuracy': 72.1832384482987,\n",
+              " 'f1': 0.6989250353450294,\n",
+              " 'precision': 0.7186466952323352,\n",
+              " 'recall': 0.7218323844829869}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SRVNt-vWe2b2"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
