#258 Prepare our data for sequence models

--- a/09_milestone_project_2_skimlit.ipynb
+++ b/09_milestone_project_2_skimlit.ipynb
@@ -1206,11 +1206,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "421A3Z52E5jc",
-        "outputId": "4ca3e288-9af7-41b4-b165-1d55bc4071bf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "421A3Z52E5jc",
+        "outputId": "4ca3e288-9af7-41b4-b165-1d55bc4071bf"
       },
       "source": [
         "train_sentences[:10]"
@@ -1243,11 +1243,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gTZOvk2eCPtC",
-        "outputId": "6bd9665a-a1d4-45f1-e24e-3581b56c4fea",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "gTZOvk2eCPtC",
+        "outputId": "6bd9665a-a1d4-45f1-e24e-3581b56c4fea"
       },
       "source": [
         "# How long is each sentence on average?\n",
@@ -1274,12 +1274,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ecfw5-PRFkHm",
-        "outputId": "ed67face-7165-4e9f-acc4-67185dff0d51",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 265
-        }
+        },
+        "id": "ecfw5-PRFkHm",
+        "outputId": "ed67face-7165-4e9f-acc4-67185dff0d51"
       },
       "source": [
         "# What's the distribution look like ?\n",
@@ -1306,11 +1306,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "B4m_m1O4F9jp",
-        "outputId": "71934374-4b36-4d35-e53e-b380468b4968",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "B4m_m1O4F9jp",
+        "outputId": "71934374-4b36-4d35-e53e-b380468b4968"
       },
       "source": [
         "# What percentile covers 95% of the sentence length\n",
@@ -1336,11 +1336,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "87jFb2NHGeH5",
-        "outputId": "a13ed05e-c551-488d-f165-1f9030d6cb76",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "87jFb2NHGeH5",
+        "outputId": "a13ed05e-c551-488d-f165-1f9030d6cb76"
       },
       "source": [
         "# Max sequence length in the training set\n",
@@ -1368,7 +1368,7 @@
         "id": "UyNaa7UaGmG7"
       },
       "source": [
-        "## Create the TextVectorizer"
+        "## Create the TextVectorizer (tokenization)"
       ]
     },
     {
@@ -1377,10 +1377,18 @@
         "id": "PHvT4VMVCNKG"
       },
       "source": [
+        "import tensorflow as tf\n",
         "from tensorflow.keras.layers.experimental.preprocessing import TextVectorization\n",
+        "# Link to TextVectorization : https://www.tensorflow.org/api_docs/python/tf/keras/layers/experimental/preprocessing/TextVectorization\n",
         "\n",
-        "text_vectorization = TextVectorization(max_tokens=None,\n",
-        "                                       standardize=)"
+        "text_vectorization = TextVectorization(max_tokens=55,\n",
+        "                                       standardize=\"lower_and_strip_punctuation\",\n",
+        "                                       split=\"whitespace\",\n",
+        "                                       ngrams=None, # create groups of n-words?\n",
+        "                                       output_mode=\"int\",\n",
+        "                                       output_sequence_length = None, # how long do you want your sequence to be\n",
+        "                                       pad_to_max_toknes = None \n",
+        "                                       )"
       ],
       "execution_count": null,
       "outputs": []
