259. Creating a text vectoriser to map our tokens (text) to numbers

--- a/09_milestone_project_2_skimlit.ipynb
+++ b/09_milestone_project_2_skimlit.ipynb
@@ -1310,26 +1310,26 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "B4m_m1O4F9jp",
-        "outputId": "71934374-4b36-4d35-e53e-b380468b4968"
+        "outputId": "597c035d-8824-4b6d-e3c9-fbb0f40ee1cf"
       },
       "source": [
         "# What percentile covers 95% of the sentence length\n",
-        "output_seq_len = np.percentile(sent_lens, 95)\n",
+        "output_seq_len = int(np.percentile(sent_lens, 95))\n",
         "output_seq_len"
       ],
-      "execution_count": 33,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "55.0"
+              "55"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 33
+          "execution_count": 39
         }
       ]
     },
@@ -1368,8 +1368,22 @@
         "id": "UyNaa7UaGmG7"
       },
       "source": [
-        "## Create the TextVectorizer (tokenization)"
+        "### Create the TextVectorizer (tokenization)\n",
+        "\n",
+        "We want to make a layer which maps our texts from words into numbers"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VvTMCq_qKgin"
+      },
+      "source": [
+        "# How many words are in our voab? (taken from table 2 in https://arxiv.org/pdf/1710.06071.pdf )\n",
+        "max_tokens = 68000"
+      ],
+      "execution_count": 40,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1381,14 +1395,111 @@
         "from tensorflow.keras.layers.experimental.preprocessing import TextVectorization\n",
         "# Link to TextVectorization : https://www.tensorflow.org/api_docs/python/tf/keras/layers/experimental/preprocessing/TextVectorization\n",
         "\n",
-        "text_vectorization = TextVectorization(max_tokens=55,\n",
-        "                                       standardize=\"lower_and_strip_punctuation\",\n",
-        "                                       split=\"whitespace\",\n",
-        "                                       ngrams=None, # create groups of n-words?\n",
-        "                                       output_mode=\"int\",\n",
-        "                                       output_sequence_length = None, # how long do you want your sequence to be\n",
-        "                                       pad_to_max_toknes = None \n",
-        "                                       )"
+        "text_vectorizer = TextVectorization(max_tokens=max_tokens, # number of words in vocabulary\n",
+        "                                    output_sequence_length = output_seq_len, # desired output length of vectorized sequence\n",
+        "                                    standardize=\"lower_and_strip_punctuation\", # default value\n",
+        "                                    split=\"whitespace\", # default value\n",
+        "                                    ngrams=None, # create groups of n-words?\n",
+        "                                    output_mode=\"int\", # default  value                               \n",
+        "                                    pad_to_max_tokens = True) # default value\n",
+        "                                    "
+      ],
+      "execution_count": 43,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XFOqL42SMeZ1"
+      },
+      "source": [
+        "# Adapt text vectorizer to training sentences\n",
+        "text_vectorizer.adapt(train_sentences)"
+      ],
+      "execution_count": 44,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZJdl5aYeMcun",
+        "outputId": "81dbd8ab-af73-4b83-87e9-743d42976637",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Test out text vectorizer on random sentences\n",
+        "import random\n",
+        "target_sentence = random.choice(train_sentences)\n",
+        "print(f\"Text:\\n{target_sentence}\")\n",
+        "print(f\"\\nLength of text: {len(target_sentence.split())}\")\n",
+        "print(f\"\\nVectorized text:{text_vectorizer([target_sentence])}\")"
+      ],
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Text:\n",
+            "the aim of this study was to determine the level of middle ear pressure and alterations in middle ear pressure levels after septoplasty among the individuals having advanced degree isolated nasal septal deviation .\n",
+            "\n",
+            "Length of text: 34\n",
+            "\n",
+            "Vectorized text:[[   2  267    4   23   17   10    6  228    2  204    4 2063 3223  200\n",
+            "     3 3366    5 2063 3223  200   93   21 9055  116    2  348  956  588\n",
+            "   984 2141  750 5793 1551    0    0    0    0    0    0    0    0    0\n",
+            "     0    0    0    0    0    0    0    0    0    0    0    0    0]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Bfn3hJHHN9GS",
+        "outputId": "7898b28c-3b95-47f5-f915-41c063555043",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# How many words in our training vocabulary ?\n",
+        "rct_20k_text_vocab = text_vectorizer.get_vocabulary()\n",
+        "print(f\"Number of words in vocab : {len(rct_20k_text_vocab)}\")\n",
+        "print(f\"Most common words in the vocab : {rct_20k_text_vocab[:5]}\")\n",
+        "print(f\"Least common words in the vocab :v{rct_20k_text_vocab[-5:]}\")"
+      ],
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Number of words in vocab : 64841\n",
+            "Most common words in the vocab : ['', '[UNK]', 'the', 'and', 'of']\n",
+            "Least common words in the vocab :v['aainduced', 'aaigroup', 'aachener', 'aachen', 'aaacp']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2PrEpj-UN0pQ"
+      },
+      "source": [
+        "### Creating an Embedding Layer"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Hr9bxe2GNpQE"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
